--- a/src/x-snc-gmap/styles.scss
+++ b/src/x-snc-gmap/styles.scss
@@ -26,20 +26,19 @@ body {
   position: relative;
   height: 100% !important;
   width: 100% !important;
-  border: 2px solid red;
+  /*border: 2px solid red;*/
 }
 
 
 .input-container {
-  border: 1px solid blue;
+  /*border: 1px solid blue;*/
   width: 100%;
   display: flex;
   flex-direction: row;
-
 }
 
 .address-input {
-  border: 1px solid green;
+  /*border: 1px solid green; */
   width: 100%;
 }
 
