width: fit-content;

--- a/src/x-snc-gmap/styles.scss
+++ b/src/x-snc-gmap/styles.scss
@@ -137,7 +137,7 @@ body {
   background-color: rgba( #FFCCCB, 0.9);
   border: 1px solid red;
   color: black;
-  width: 200px;
+  width: fit-content;
   text-align: center;
   font-size: 12px;
   padding: 0.1rem
