--- a/src/x-snc-gmap/styles.scss
+++ b/src/x-snc-gmap/styles.scss
@@ -134,9 +134,9 @@ body {
 }
 
 .overlay-content {
-  background-color: rgba( #FFCCCB, 0.9);
-  border: 1px solid red;
-  color: black;
+  background-color: rgba( #0f4d92, 0.6);
+  border: 1px solid  #0f4d92;
+  color: white;
   width: fit-content;
   text-align: center;
   font-size: 12px;
