--- a/src/x-snc-gmap/styles.scss
+++ b/src/x-snc-gmap/styles.scss
@@ -122,6 +122,13 @@ body {
 
 /* Google Map Styling*/
 
+.gm-style-iw-d {
+
+  p {
+    margin : 2px;
+  }
+}
+
 #iw-container  .iw-title {
   font-family: 'Open Sans Condensed', sans-serif;
   font-size: 22px;
