--- a/src/x-snc-gmap-demo/style.scss
+++ b/src/x-snc-gmap-demo/style.scss
@@ -1,6 +1,10 @@
 @import '@servicenow/sass-kit/host';
 
+
 .example-container {
-    width: 800px; 
+    width: 800px;
     height: 800px;
+
+    padding: 1rem;
+
 }
