--- a/example/styles.css
+++ b/example/styles.css
@@ -1,9 +1,14 @@
-body {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    place-content: center;
-    font-family: sans-serif;
-    background-color: #e9f2fd;
-    padding: 1rem;
+*, *::before, *::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: 'Source Sans Pro', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+    overflow-x: hidden;
 }
