--- a/src/x-snc-gmap/styles.scss
+++ b/src/x-snc-gmap/styles.scss
@@ -1,6 +1,13 @@
 @import '@servicenow/sass-kit/host';
 @import '@servicenow/sass-global/index';
 
+:host {
+  display: block;
+  width: 100%;
+  height: 100%;
+  min-height: 400px;
+}
+
 $white: #FCFCFC;
 $gray: #CBCDD3;
 $dark: #777777;
@@ -17,7 +24,8 @@ body {
 }
 
 #map {
-  height: 100%;
+  flex: 1;
+  min-height: 0;
 }
 
 .map-container {
